--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="description" content="OKRA SEOUL" />
+    <meta
+      name="keywords"
+      content="오크라, 오크라서울, 오크라 서울, okraseoul, okra seoul, OKRASEOUL, OKRA SEOUL, Okra seoul, Okraseoul, 크림필드, 페스티벌, 페스티발 creamfields, festival, club party, club, 클럽, 클럽 파티, 클럽 "
+    />
+    <meta name="author" content="OKRA SEOUL" />
+    <link rel="canonical" href="https://okraseoul.com/" />
 
     <!-- Chrome, Firefox, Opera -->
     <meta content="#181818" name="theme-color" />
@@ -43,6 +52,28 @@
       href="./assets/favicon/favicon.ico"
       type="image/x-icon"
     />
+
+    <!-- open graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="OKRA SEOUL" />
+    <meta property="og:url" content="https://okraseoul.com/" />
+    <meta property="og:site_name" content="OKRA SEOUL" />
+    <meta
+      property="og:image"
+      content="https://okraseoul.com/images/mainimage.jpg"
+    />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:description" content="OKRA SEOUL" />
+
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="OKRA SEOUL" />
+    <meta name="twitter:url" content="https://okraseoul.com/" />
+    <meta
+      name="twitter:image"
+      content="https://okraseoul.com/images/mainimage.jpg"
+    />
+    <meta name="twitter:description" content="OKRA SEOUL" />
 
     <title>OKRA SEOUL</title>
   </head>
